# carsproject

./: LICENSE  README.md  pyproject.toml
project/: db.sqlite3
project/backend/: db.sqlite3
project/backend/backend/: settings.py  urls.py
project/backend/cars/: models.py  serializers.py  tests.py  views.py
project/backend/cars/migrations/: 0001_initial.py
project/downloader/: custom_logger.py  downloader.py  downloader_utils.py  test_downloader.py
